# HBDIA

./: .gitignore  CMakeLists.txt  README.md  simple_hbdia_example.cpp
archive/: HBDIAVector_old.cpp
benchmarking/: benchCusparse.cpp  benchCusparse.hpp  benchHBDIA.cpp  benchHBDIA.hpp  benchmark.cpp  plot_hbdia_cusparse_runtime.py  run_parameter_sweep.sh
benchmarking/Plotting/: combine_csv_data_runtime_comparism.py  combine_csv_data_storage_comparism.py  plot_format_comparison.py  plot_hbdia_storage_analysis.py  plot_hbdia_vs_cusparse_runtime.py
include/: types.hpp
include/DataExchange/: BasicDistributor.hpp  BasicExtractor.hpp  HBDIACommunicator.hpp  HBDIADistributor.hpp  HBDIAExtractor.hpp  MPICommunicator.hpp
include/Format/: HBDIA.hpp  HBDIAPrinter.hpp  HBDIAVector.hpp
include/Operations/: HBDIASpMV.cuh  HBDIASpMV.hpp
src/: CMakeLists.txt
src/DataExchange/: BasicDistributor.cpp  BasicExtractor.cpp  CMakeLists.txt  MPICommunicator.cpp
src/Format/: CMakeLists.txt  HBDIA.cpp  HBDIAPrinter.cpp  HBDIAVector.cpp
src/Operations/: HBDIASpMV.cpp  HBDIASpMV.cu
tests/: CMakeLists.txt  job_test_HBDIA.slurm  run_HBDIA_cusparse_comparison.cpp  run_HBDIA_print_test.cpp  run_HBDIA_test.cpp
